fix layout shifting

--- a/src/Investigate/Components/Investigate.css
+++ b/src/Investigate/Components/Investigate.css
@@ -15,3 +15,11 @@
 .investigate-background[data-active="false"] {
   display: none;
 }
+
+.cytoscape-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: var(--color-background-base-default);
+  padding-block: var(--spacing-2);
+}
